# Diktieren

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Diktieren.py  Erweiterungen.txt  LICENSE  Mikrophon.Test.py  README.md  audio_devices.py  list_all_devices.py  microphone_level_monitor.py  pyproject.toml  requirements.txt  test_comparison.py  test_device9.py  test_new_features.py  test_pyaudio_direct.py  test_sr_device1.py  test_warmup.py  threshold_cache.json
.claude/: settings.local.json
